--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,8 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="560dp"
+        android:transitionGroup="false"
+        android:clipChildren="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
