--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:transitionGroup="true"
+    tools:targetApi="lollipop"
     tools:context=".ui.dashboard.BlankFragment" >
 
     <androidx.cardview.widget.CardView
