--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -28,10 +28,13 @@
 
             <TextView
                 android:id="@+id/txtChineseCharacter"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="256dp"
+                android:layout_gravity="center_horizontal"
                 android:gravity="center|center_horizontal|center_vertical"
-                android:text="ChineseCharacter" />
+                android:text="ChineseCharacter4535245325345235"
+                android:textAlignment="center"
+                android:textSize="36sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
